# prd-kit

./: .copilot-skills-config.yaml  .gitignore  AGENTS.md  README.md  pyproject.toml
.prd-kit/commands/: decompose.md  draft.md  generate-deliverables.md  refine.md
.prd-kit/scripts/prd_scripts/: setup_decompose.py  setup_draft.py  setup_refine.py
.prd-kit/templates/: prd-template.md  research-template.md
.prd-kit/validators/: check-deliverables.py  generate-implementation-order.py
prds/test/: research.md
samples/PRDs/bulk-email/: PRD.md  research.md
samples/PRDs/bulk-email/deliverables/: README.md  deliverable-001-bulk-collection-tasks-api.md  deliverable-002-bulk-email-sending-ui.md  deliverables-map.json
samples/specs/009-bulk-email-ui/: README.md  plan.md  quickstart.md  spec.md  tasks.md
samples/specs/009-bulk-email-ui/checklists/: requirements.md
scripts/: verify_sync.py
src/prd_kit/: __init__.py  cli.py
src/prd_kit/commands/: __init__.py  init.py  update.py  version.py
src/prd_kit/templates/: context-template.md  deliverable-template.md  plan-template.md  tasks-template.md  tech-constitution.md
src/prd_kit/templates/agents/antigravity/: prd-constitution.md  prd-context.md  prd-decompose.md  (+9 more)
src/prd_kit/templates/commands/: constitution.md  context.md  decompose.md  discover.md  draft.md  generate-deliverables.md  implement.md  init-feature.md  plan.md  refine.md  tasks.md  tech-constitution.md
src/prd_kit/templates/memory/: product-constitution.md
src/prd_kit/templates/validators/: check-completeness.py  check-deliverables.py
(+29 files in other folders)
