[project]
name = "prd-kit"
version = "0.1.0"
description = "PRD Kit - Product Requirements Document generation with AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Felipe Mosso" }
]
keywords = ["prd", "product", "requirements", "ai", "agents", "spec-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
prd = "prd_kit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prd_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/scripts",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
